--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ふぁぶページ</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://chelumvassara.github.io/links/icon.png">
 </head>
 <body>
     <div class="hamburger">
@@ -21,7 +22,6 @@
             <a href="#videos" class="toc_link">Videos <span>アップロード動画</span></a>  <span class="line"></span>
             <a href="#tweets" class="toc_link">Tweets <span>Twitterツイート</span></a>  <span class="line"></span>
             <a href="#websites" class="toc_link">Websites <span>公開ウェブサイト</span></a>  <span class="line"></span>
-            <a href="#faq" class="toc_link">Q&A <span>質問と回答</span></a>  <span class="line"></span>
         </div>
         <div class="sns">
             <a href="https://m.youtube.com/@farvle_" title="YouTube - @farvle_">
@@ -62,6 +62,8 @@
         </section>
 
         <section id="profile">
+            <p class="secttl">Profile</p>
+
             <div class="images">
                 <img src="img/farvle_icon.png" alt="" class="icon">
                 <p class="name">ふぁぶ</p>
@@ -80,6 +82,8 @@
         </section>
 
         <section id="videos">
+            <p class="secttl">Videos</p>
+
             <div class="new">
                 <p class="ttl">最新動画</p>
                 <iframe src="https://www.youtube.com/embed/?list=UUr_oXwPLHPXHEJCYiOg8I6g" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -95,6 +99,8 @@
         </section>
 
         <section id="tweets">
+            <p class="secttl">Tweets</p>
+
             <div class="tweet">
                 <a class="twitter-timeline" href="https://twitter.com/farvle_?ref_src=twsrc%5Etfw" data-chrome="noheader noscrollbar">Twitterツイート</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             </div>
@@ -105,6 +111,8 @@
         </section>
 
         <section id="websites">
+            <p class="secttl">Websites</p>
+
             <a href="https://chelumvassara.github.io/links" class="farvle_links">
                 <img src="img/links_pc.png" alt="" class="pc">
                 <img src="img/link_phone.jpg" alt="" class="phone">
@@ -120,11 +128,12 @@
                 <p>ふぁぶページ</p>
                 <span>
                     ふぁぶの公式ホームページ。<br>
-                    完全にラムダ様のホームページを参考にして制作。
+                    完全にラムダ様のホームページを参考にして制作。<br>
+                    Q&Aの部分はしろくる様の配信説明書&QAを参考にした。
                 </span>
             </a>
             
-            <a href="#faq" class="scrolldown">
+            <a href="#top" class="scrolldown up">
                 <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18 9L12 15L6 9"></path></svg>
             </a>
         </section>
